# job-finder

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BUG_FIXES_SUMMARY.md  CLAUDE.md  CODE_QUALITY_ISSUES.md  CONTRIBUTING.md  DATA_QUALITY_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  DOCKER_LOCAL_TESTING.md  DOCKER_QUICKSTART.md  DOCUMENTATION_CONSOLIDATION_COMPLETE.md  Dockerfile  Dockerfile.dev  ENVIRONMENTS.md  ENVIRONMENT_SUMMARY.md  FIRESTORE_INDEXES.md  GITHUB_WORKFLOWS_SETUP.md  IMPLEMENTATION_NOTES.md  INTEGRATION_AUDIT.md  LOCAL_E2E_IMPLEMENTATION.md  Makefile  NEXT_SESSION.md  OMV_DEPLOYMENT.md  POLICY_REVIEW.md  PORTAINER_DEPLOYMENT.md  PORTAINER_WALKTHROUGH.md  PRODUCTION_DATA_DELETION_INVESTIGATION.md  PRODUCTION_MIGRATION_COMPLETE.md  QUEUE_IMPLEMENTATION_SUMMARY.md  QUEUE_SYSTEM_GUIDE.md  README.md  SCHEDULER_DEPLOYMENT_SUMMARY.md  SESSION_CONTEXT.md  cleanup_job_matches.py  docker-compose.dev.yml  docker-compose.local-build.yml  docker-compose.local-dev.yml  (+26 more)
.claude/: context.md  settings.json
.github/: README.md  pull_request_template.md
config/: config.example.yaml  config.production.yaml
credentials/: README.md
docker/: entrypoint.sh
docs/: ALERTING_SYSTEM_PLAN.md  ARCHITECTURAL_CLEANUP_ANALYSIS.md  BRANCHING_STRATEGY.md  CLEANUP_SUMMARY.md  CLOUD_LOGGING_DESIGN.md  COMPANY_INFO_SYSTEM.md  COMPANY_SUBMISSION_UI_PLAN.md  DATA_STRUCTURE_CLEANUP_PLAN.md  DEPLOYMENT_CHECKLIST.md  E2E_DATA_COLLECTOR_IMPLEMENTATION.md  E2E_IMPROVEMENT_STRATEGY.md  E2E_LOG_STREAMING.md  E2E_LOG_STREAMING_QUICKREF.md  README.md  (+26 more)
(+176 files in other folders)
